--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
       <form class="Address">
         <div class="form-row">
           <div class="col-sm-2">
+          </div>
+          <div class="col-sm-2">
             <input type="text" class="form-control" id="inputAddress2" placeholder="City">
           </div>
           <div class="col-sm-2">
@@ -94,6 +96,8 @@
         </div>
       </form>
       <form class="form-row">
+        <div class="col-sm-2">
+        </div>
         <div class="col-sm-2">
           <input type="tel" class="form-control" id="inputAddress2" placeholder="Postal / Zip Code">
         </div>
